# SrechEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
bins/: README.md
conf/: Jieba.json  README.md
data/: README.md  dictionary.txt  dictionaryCh.txt  dictionaryIndex.txt  dictionaryIndexCh.txt  offSetLib.txt  offSetLib_clean.txt  offSetLib_clean_new.txt
include/: Configuration.h  CppJieba.h  DictProducer.h  Dictionary.h  DirScanner.cpp  DirScanner.h  KeyRecommander.h  LRU.h  PageLib.h  PageLibPreprocessor.h  README.md  SearchEngineServer.h  SplitTool.h  SubLRUCache.h  WebPage.h  WebPageQuery.h  func.h  tinyxml2.cpp
infomation/: README.md
src/: Configuration.cpp  CppJieba.cpp  DictProducer.cpp  Dictionary.cpp  DirScanner.cpp  KeyRecommander.cpp  LRU.cpp  PageLib.cpp  PageLibPreprocessor.cpp  README.md  SearchEngineServer.cpp  SubLRUCache.cpp  WebPage.cpp  WebPageQuery.cpp
